--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,7 @@ description:         Please see the README on Github at <https://github.com/dcas
 
 dependencies:
 - base >= 4.7 && < 5
-- template-haskell > 2.13 && < 2.14
+- template-haskell >= 2.13 && < 2.14
 - haskell-src-meta > 0.7 && < 0.9
 - prettyprinter > 1.2 && < 1.3
 - syb > 0.6 && < 0.8
